@@ -11,7 +11,7 @@ class LockDownPlugin(Plugin):
 
     name = "Lock down the UI"
     description = "Hides the menu bar and the icon bar. The only way to remove this plugin later is by deleting 'lock_down.py' from Mnemosyne's plugin directory'"
-    supported_API_level = 2
+    supported_API_level = 3
     
     def activate(self):
         Plugin.activate(self)
