@@ -36,7 +36,7 @@ class DecoratedVocabularyPlugin(Plugin):
     name = "Decorated vocabulary"
     description = "Vocabulary card type with some extra text"
     components = [DecoratedVocabulary]
-    supported_API_level = 2
+    supported_API_level = 3
 
 from mnemosyne.libmnemosyne.plugin import register_user_plugin
 register_user_plugin(DecoratedVocabularyPlugin)
