@@ -474,6 +474,9 @@ _("This card has different tags than its sister cards. Update tags for current c
         w.close_progress()
 
     def star_current_card(self):
+        review_controller = self.review_controller()
+        if not review_controller.card:
+            return
         self.stopwatch().pause()
         self.flush_sync_server()
         if self.config()["star_help_shown"] == False:
@@ -481,7 +484,6 @@ _("This card has different tags than its sister cards. Update tags for current c
 _("This will add a tag 'Starred' to the current card, so that you can find it back easily, e.g. to edit it on a desktop."))
             self.config()["star_help_shown"] = True
         db = self.database()
-        review_controller = self.review_controller()
         tag = db.get_or_create_tag_with_name(_("Starred"))
         _sister_card_ids = [card._id for card in \
             self.database().cards_from_fact(review_controller.card.fact)]
@@ -492,10 +494,12 @@ _("This will add a tag 'Starred' to the current card, so that you can find it ba
         self.stopwatch().unpause()
 
     def delete_current_card(self):
+        review_controller = self.review_controller()
+        if not review_controller.card:
+            return
         self.stopwatch().pause()
         self.flush_sync_server()
         db = self.database()
-        review_controller = self.review_controller()
         fact = review_controller.card.fact
         no_of_cards = len(db.cards_from_fact(fact))
         if no_of_cards == 1:
